--- a/iters-web/src/main/resources/templates/page/emailRecycle.html
+++ b/iters-web/src/main/resources/templates/page/emailRecycle.html
@@ -25,7 +25,7 @@
     <ul class="email_ul" id="htmlEmail">
         <li  class="li_active" style="display: none">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li></a>
         <li style="display: none">草稿箱<span>12</span></li>
-        <li style="display: none">已发送<span>12</span></li>
+        <li style="display: none">发件箱<span>12</span></li>
         <li  onclick="clickRecycle()">回收站(<b id="recycleSum"></b>)<span id="recycleCount"></span></li>
     </ul>
 </div>
@@ -79,7 +79,7 @@
         <div class="pagination ue-clear"></div>
     </div>
     <div  class="email_con">
-        <div class="title"><h2>已发送</h2></div>
+        <div class="title"><h2>发件箱</h2></div>
         <div class="query">
             <div class="tabe_bot">
                 <div class="l_left"><label>邮件标题：</label><input type="text" placeholder="请输入邮件名称"></div>
@@ -156,9 +156,7 @@
                             $("#htmlEmail").append(htmlEmail);
                             $("#htmlEmail").trigger("create");
                     });
-
                 }
-
             }
         });
     }
