--- a/iters-web/src/main/resources/templates/page/emailSenter.html
+++ b/iters-web/src/main/resources/templates/page/emailSenter.html
@@ -14,44 +14,45 @@
         .tabe_btn{width: 60px;height: 30px;background-color: #68b86c;border: none;border-radius: 6px;color: #fff}
     </style>
     <title>邮件管理</title>
+    <script src="../../statics/assets/js/core.js"></script>
 </head>
-<body onload="InboxInf()">
+<body onload="SenterInf()">
 <div class="emal_left">
     <input type="text" id="id" style="display: none" value>
     <div class="email_top">
         <a href="emailReceiver" class="a_border"><i class="get_i"></i> 收信</a>
         <a href="#" onclick="openlayer()"><i class="write_i"></i>写信</a>
     </div>
-    <ul class="email_ul">
-        <a href="emailReceiver" style="text-decoration:none;color: #0C0C0C"><li class="li_active">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li></a>
-        <a href="emailDrafts" style="text-decoration:none;color: #0C0C0C"><li>草稿箱(<b id="DraftsSum"></b>)<span id="DraftsCount"></span></li></a>
-        <a href="emailSenter" style="text-decoration:none;color: #0C0C0C"><li >发件箱(<b id="SenterSum"></b>)<span id="SenterCount"></span></li></a>
-        <a href="emailRecycle" style="text-decoration:none;color: #0C0C0C"><li>回收站(<b id="recycleSum"></b>)<span id="recycleCount"></span></li></a>
+    <ul class="email_ul" id="htmlEmail">
+        <a href="emailReceiver"  style="text-decoration:none;color: #0C0C0C"><li style="display: none" class="li_active">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li></a>
+        <li style="display: none">草稿箱<span>12</span></li>
+        <li onclick="clickSenter()">发件箱(<b id="SenterSum"></b>)<span id="SenterCount"></span></li>
+        <li style="display: none" onclick="clickRecycle()">回收站(<b id="recycleSum"></b>)<span id="recycleCount"></span></li>
     </ul>
 </div>
 <div class="emal_right">
-    <div  class="email_con" style="display: block">
-    <div class="title"><h2>收件箱</h2></div>
-    <div class="query">
-        <div class="tabe_bot">
-            <div class="l_left"><label>邮件标题：</label><input type="text" id="emailTitles" placeholder="请输入邮件标题"></div>
-            <div class="l_left"><label>是否查看：</label><input id="isMsgs" placeholder="请输入是或者否" /></div>
-            <div class="l_left"><label>发送时间：</label><input id="sendTimes" placeholder="请输入发送时间" /></div>
-            <button class="tabe_btn " onclick="getEmailTableData()">查询</button>
-            <div class="clear"></div>
+    <div  class="email_con">
+        <div class="title"><h2>收件箱</h2></div>
+        <div class="query">
+            <div class="tabe_bot">
+                <div class="l_left"><label>邮件标题：</label><input type="text" id="emailTitles" placeholder="请输入邮件标题"></div>
+                <div class="l_left"><label>是否查看：</label><input id="isMsgs" placeholder="请输入是或者否" /></div>
+                <div class="l_left"><label>发送时间：</label><input id="sendTimes" placeholder="请输入发送时间" /></div>
+                <button class="tabe_btn ">查询</button>
+                <div class="clear"></div>
+            </div>
         </div>
+        <div class="table-operate ue-clear">
+            <!--<a href="#" class="sent01"  onclick="openlayerEquery(id)">转发</a>
+           &lt;!&ndash; <a href="javascript:;" class="del">删除</a>&ndash;&gt;
+            <a href="#" onclick="openlayerEquery(id)" class="back">回复</a>-->
+            <a href="javascript:;" class="out">导出</a>
+        </div>
+        <div class="table-box">
+            <table id="table" class="table_style"></table>
+        </div>
+        <div class="pagination ue-clear"></div>
     </div>
-    <div class="table-operate ue-clear">
-        <!--<a href="#" class="sent01"  onclick="openlayerEquery(id)">转发</a>
-       &lt;!&ndash; <a href="javascript:;" class="del">删除</a>&ndash;&gt;
-        <a href="#" onclick="openlayerEquery(id)" class="back">回复</a>-->
-        <a href="javascript:;" class="out" onclick="exportEmails()">导出</a>
-    </div>
-    <div class="table-box">
-        <table id="table" class="table_style"></table>
-    </div>
-    <div class="pagination ue-clear"></div>
-</div>
     <div  class="email_con">
         <div class="title"><h2>草稿箱</h2></div>
         <div class="query">
@@ -78,26 +79,23 @@
         </div>
         <div class="pagination ue-clear"></div>
     </div>
-    <div  class="email_con">
+    <div  class="email_con" style="display: block">
         <div class="title"><h2>发件箱</h2></div>
         <div class="query">
             <div class="tabe_bot">
-                <div class="l_left"><label>邮件标题：</label><input type="text" placeholder="请输入邮件名称"></div>
-                <div class="l_left"><label>是否查看：</label><select>
-                    <option>查看</option>
-                    <option>未查看</option>
-                </select></div>
-                <div class="l_left"><label>发送时间：</label><input id="demo02" placeholder="输入提交时间" /></div>
-                <button class="tabe_btn ">查询</button>
+                <div class="l_left"><label>邮件标题：</label><input type="text" id="emailsTitles" placeholder="请输入邮件标题"></div>
+                <div class="l_left"><label>是否查看：</label><input id="issMsgs" placeholder="请输入是或者否" /></div>
+                <div class="l_left"><label>发送时间：</label><input id="sendsTimes" placeholder="请输入发送时间" /></div>
+                <button class="tabe_btn " onclick="getEmailSenterTableData()">查询</button>
                 <div class="clear"></div>
             </div>
         </div>
         <div class="table-operate ue-clear">
-            <a href="#" class="sent01"  onclick="openlayer()">发送</a>
-            <a href="javascript:;" class="del">删除</a>
+            <!--<a href="#" class="sent01"  onclick="openlayer()">发送</a>
+            <a href="javascript:;" class="del">删除</a>-->
             <!--<a href="javascript:;" class="back">回息</a>-->
 
-            <a href="javascript:;" class="out">导出</a>
+            <a href="javascript:;" class="out" onclick="exportSenterEmails()">导出</a>
         </div>
         <div class="table-box">
             <table id="table02" class="table_style"></table>
@@ -140,25 +138,34 @@
 <script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
 <script src="statics/assets/js/email.js"></script>
 <script src="statics/assets/js/emailRecycle.js"></script>
+<script src="statics/assets/js/emailSenter.js"></script>
 <script>
-    $(function () {debugger;
+    function clickSenter(){
         $.ajax({
             type: "GET",
-            url: "email/emailDraftsSumOrCount/",
+            url: "email/emailsSentersInfmormations/",
             dataType: "json",
-            success: function (result) {
-                if (result.code == 100) {
-                    $.each(result.data, function (index, value) {
-                        if(index==0) {
-                            $('#DraftsCount').html(value);
-                        }
-                        if(index==1) {
-                            $('#DraftsSum').html(value);
-                        }
+            success: function (result) {debugger;
+                if (result.code == 100) {debugger;
+                    $.each(result.data.emailSentersLists,function (index, value) {
+                        var htmlEmail="";
+                        htmlEmail+='<ul  id="htmlEmail" class="email_ul" >' +
+                            '<li>' +
+                            '<font size="3">'+value.senderName+'<b id="senderNames" style="text-overflow:ellipsis"></b></font><br>'+
+                            '<font size="2">'+value.emailTitle+'<b id="emailTitle"></b></font>&nbsp&nbsp&nbsp<font size="2"><b style="float: right;" id="sendTime">'+value.sendTimes+'</b></font><br>'+
+                            '<font size="2">'+value.emailContent+'<b id="emailContent"></b></font>'+
+                            ' </li>'+
+                            '</ul>'
+                        $("#htmlEmail").append(htmlEmail);
+                        $("#htmlEmail").trigger("create");
                     });
                 }
             }
         });
+    }
+</script>
+<script>
+    $(function () {
         $.ajax({
             type: "GET",
             url: "email/emailSenterSumOrCount/",
