--- a/iters-web/src/main/resources/templates/page/index.html
+++ b/iters-web/src/main/resources/templates/page/index.html
@@ -46,14 +46,8 @@
                             <li><a href="schedule" target="right">日程管理</a></li>
                         </ul>
                     </li>
-
-                    <li class="train"><div class="nav-header"><a href="JavaScript:;" class="ue-clear" ><span>培训管理</span><i class="icon hasChild"></i></a></div>
-                        <ul class="subnav">
-                            <li><a href="mytrain" target="right">我的培训</a></li>
-                            <li><a href="train" target="right">培训管理</a></li>
-
-                        </ul>
-                    </li>
+                    <li class="train"><div class="nav-header"><a href="train" class="ue-clear"  target="right"><span>培训管理</span><i class="icon hasChild"></i></a></div></li>
+                    <li class="list_ms"><div class="nav-header"><a href="alipay"class="ue-clear"  target="right"><span>支付管理</span><i class="icon"></i></a></div></li>
                     <li class="email"><div class="nav-header"><a href="email"class="ue-clear"  target="right"><span onclick="emailSumOrCount()">邮箱管理</span><i class="icon"></i></a></div></li>
                     <li class="list_m"><div class="nav-header"><a href="mailList" class="ue-clear" target="right"><span>通讯录管理</span><i class="icon"></i></a></div></li>
                     <li class="news_m"><div class="nav-header"><a href="notice" class="ue-clear"  target="right"><span>通知通告</span><i class="icon"></i></a></div></li>
