--- a/iters-web/src/main/resources/templates/page/train_tail.html
+++ b/iters-web/src/main/resources/templates/page/train_tail.html
@@ -1,13 +1,13 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>培训</title>
-    <link href="css/tail.css" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <link href="statics/assets/css/tail.css" rel="stylesheet" type="text/css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="statics/assets/js/utf8-php/ueditor.all.min.js"></script>
+    <script src="statics/assets/js/utf8-php/ueditor.config.js"></script>
+    <script type="text/javascript" src="statics/assets/js/jquery.js"></script>
     <script>
         function change() {
             var height01 = $(window).height();
@@ -15,7 +15,6 @@
         }
     </script>
 </head>
-
 <body style="border-radius: 8px" onload="change(),init()">
 <!--<div class="title"><h2>通知详情</h2></div>-->
 <form id="form_demo" >
@@ -26,25 +25,25 @@
                 <tbody>
                 <tr>
                     <td style="border-top: none">培训名称：<i class="i_start"></i> </td>
-                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text"  name ="name" minlength="2"  required id="name"></td>
+                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text"  name ="name" minlength="2"  required id="trainingName"></td>
                 </tr>
                 <tr>
                     <td>主讲人：</td>
-                    <td  style="text-align: left"><input type="text" id="user"></td>
+                    <td  style="text-align: left"><input type="text" id="keynoteSpeaker"></td>
                     <td>培训地点：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="addr"></td>
+                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="trainingPlace"></td>
                 </tr>
                 <tr>
-                    <td>开始时间：</td>
-                    <td  style="text-align: left"><input type="text" id="demo"></td>
+                    <td>培训时间：</td>
+                    <td  style="text-align: left" readonly="readonly"><input type="text"  id="trainTime"></td>
                     <td>结束时间：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="demo01"></td>
+                    <td colspan = "3" style="text-align: left" readonly="readonly"><input type="text" class="long_text"  id="endTime"></td>
                 </tr>
                 <tr>
-                    <td>参与人：</td>
-                    <td  style="text-align: left"><input type="text" id="person"></td>
+                    <td>参加人：</td>
+                    <td  style="text-align: left"><input type="text" id="participator"></td>
                     <td>成绩：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="core"></td>
+                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="performance"></td>
                 </tr>
                 <tr>
                     <td style="line-height: 240px">主要内容：</td>
@@ -55,132 +54,192 @@
         </div>
     </div>
     <div class="bot_btn">
-        <input class="btn" value="保存" type="submit"/>
-        <button class="btn btn1"><a href="notice.html" target="right">返回</a></button>
+        <button class="btn"><a href="train" style="text-decoration:none;color: #0C0C0C" target="right" onclick="saveTrainInf()">保存</a></button>
+        <button class="btn btn1"><a href="train" target="right">返回</a></button>
     </div>
 </div>
 </form>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script >
-    $.validator.setDefaults({
-        submitHandler: function() {
-            alert("修改成功");
-        }
-    });
-    $().ready(function() {
-        $("#form_demo").validate();
-    });
-</script>
-<script src="js/date/js/laydate.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+<script src="statics/assets/js/utf8-php/ueditor.config.js"></script>
+<script src="statics/assets/js/utf8-php/ueditor.all.min.js"></script>
 <script>
-    var PROJECTID, TASKTYPE, TASKPHASE,  PERSONID
-    !function () {
-        laydate.skin('danlan');//切换皮肤，请查看skins下面皮肤库
-        laydate({ elem: '#demo' });//绑定元素
-        laydate({ elem: '#demo1' });
-        laydate({ elem: '#demo2' });//绑定元素
+    var ue = UE.getEditor('editor');
+    function isFocus(e){
+        alert(UE.getEditor('editor').isFocus());
+        UE.dom.domUtils.preventDefault(e)
+    }
+    function setblur(e){
+        UE.getEditor('editor').blur();
+        UE.dom.domUtils.preventDefault(e)
+    }
+    function insertHtml() {
+        var value = prompt('????html????', '');
+        UE.getEditor('editor').execCommand('insertHtml', value)
+    }
+    function createEditor() {
+        enableBtn();
+        UE.getEditor('editor');
+    }
+    function getAllHtml() {
+        alert(UE.getEditor('editor').getAllHtml())
+    }
+    function getContent() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').getContent());
+        alert(arr.join("\n"));
+    }
+    function getPlainTxt() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').getPlainTxt());
+        alert(arr.join('\n'))
+    }
+    function setContent(isAppendTo) {
+        var arr = [];
+        arr.push("");
+        UE.getEditor('editor').setContent('??????ueditor', isAppendTo);
+        alert(arr.join("\n"));
+    }
+    function setDisabled() {
+        UE.getEditor('editor').setDisabled('fullscreen');
+        disableBtn("enable");
+    }
+
+    function setEnabled() {
+        UE.getEditor('editor').setEnabled();
+        enableBtn();
+    }
+
+    function getText() {
+
+        var range = UE.getEditor('editor').selection.getRange();
+        range.select();
+        var txt = UE.getEditor('editor').selection.getText();
+        alert(txt)
+    }
+
+    function getContentTxt() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').getContentTxt());
+        alert(arr.join("\n"));
+    }
+    function hasContent() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').hasContents());
+        alert(arr.join("\n"));
+    }
+    function setFocus() {
+        UE.getEditor('editor').focus();
+    }
+    function deleteEditor() {
+        disableBtn();
+        UE.getEditor('editor').destroy();
+    }
+    function disableBtn(str) {
+        var div = document.getElementById('btns');
+        var btns = UE.dom.domUtils.getElementsByTagName(div, "button");
+        for (var i = 0, btn; btn = btns[i++];) {
+            if (btn.id == str) {
+                UE.dom.domUtils.removeAttributes(btn, ["disabled"]);
+            } else {
+                btn.setAttribute("disabled", "true");
+            }
+        }
+    }
+    function enableBtn() {
+        var div = document.getElementById('btns');
+        var btns = UE.dom.domUtils.getElementsByTagName(div, "button");
+        for (var i = 0, btn; btn = btns[i++];) {
+            UE.dom.domUtils.removeAttributes(btn, ["disabled"]);
+        }
+    }
+
+    function getLocalData () {
+        alert(UE.getEditor('editor').execCommand( "getlocaldata" ));
+    }
+
+    function clearLocalData () {
+        UE.getEditor('editor').execCommand( "clearlocaldata" );
+        alert("")
+    }
+</script>
+<script>
+    /*点击详情查看培训列表里面内容*/
+    var id = window.parent.document.getElementById("id").value;
+    if (!!id) {debugger;
+        $.ajax({
+            type: "GET",
+            url: "train/queryTrain/" + id,
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    $.each(result.data, function (index, value) {
+                        $('#trainingName').val(value.trainingName);
+                        $('#keynoteSpeaker').val(value.keynoteSpeaker);
+                        $('#trainTime').val(value.trainTime);
+                        $('#endTime').val(value.endTime);
+                        $('#participator').val(value.participator);
+                        $('#trainingPlace').val(value.trainingPlace);
+                        $('#performance').val(value.performance);
+                        UE.getEditor('editor').addListener("ready", function () {
+                            //赋值
+                            UE.getEditor('editor').setContent(value.trainContent);
+                        })
+                    });
+                }else {
+                    console.log(result.message);
+                }
+            }
+        });
+    }
+    /*点击保存进行添加培训列表内容*/
+    function saveTrainInf() {
+        var trainingName = $('#trainingName').val();
+        var keynoteSpeaker = $('#keynoteSpeaker').val();
+        var trainTime = $('#trainTime').val();
+        var endTime =  $('#endTime').val();
+        var participator = $('#participator').val();
+        var trainingPlace =  $('#trainingPlace').val();
+        var performance =  $('#performance').val();
+        var trainContent = UE.getEditor('editor').getContent();
+        var data = {
+            "trainingName": trainingName,"keynoteSpeaker": keynoteSpeaker,"trainTime": trainTime,"endTime": endTime,"participator": participator,"trainingPlace":trainingPlace,"performance":performance,"trainContent":trainContent
+        }
+        $.ajax({
+            type: "POST",
+            url: "train/creatTrain",
+            data: data,
+            dataType: "json",
+            success: function (result) {debugger;
+                if (result.code == 100) {debugger;
+                    console.log(data);
+                    parent.location.href = 'train';
+                } else {
+                    console.log(result.message);
+                }
+            }
+        });
+
+    }
+    
+</script>
+<script >
+</script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
+<script>
+    !function(){
+        laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
+        laydate({elem: '#trainTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
+        laydate({elem: '#endTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
     }();
-    function init() {
-        if (parent.getCurrentID() != "") {
-            $.ajax({
-                url: '../TaskRecord/SearchTaskById?taskId=' + parent.getCurrentID(),
-                type: 'POST',
-                dataType: 'json',
-                success: function (result) {
-                    var data = result.data;
-                    if (data) {
-                        PROJECTID = data.PROJECTID
-                        PERSONID =data.PERSONID
-                        TASKPHASE = data.TASKPHASE;
-                        TASKTYPE = data.TASKTYPE;
-                        $("#name").val(data.PROJECTNAME);
-                        $("#user").val(data.TASKPHASENAME);
-                        $("#addr").val(data.STATE);
-
-                        $("#demo").val(getFormatTime(data.STARTTIME.substring(6,19)));
-                        $("#demo01").val(getFormatTime(data.STARTTIME.substring(6,19)));
-                        $("#person").val(data.NOTE);
-                        $("#core").val(data.NOTE);
-                        $("#editor").val(data.NOTE);
-
-
-
-                    }
-                    else {
-                        alert("获取失败！");
-                    }
-                },
-                error: function (err) {
-                }
-            })
-
-
-        }
-        function Save() {
-            $.ajax({
-                type: "POST",
-                url: "../TaskRecord/UpdateTask",
-                data: {
-                    TASKID: parent.getCurrentID(),
-                    PROJECTID: PROJECTID,
-                    STATE: $("#name").val(),
-                    TASKPHASE: $("#user").val(),
-                    TASKPHASE: $("#addr").val(),
-                    STARTTIME: $("#demo").val(),
-                    STARTTIME: $("#demo01").val(),
-                    TASKTYPE: $("#person").val(),
-                    TASKTYPE: $("#core").val(),
-                    NOTE: $("#editor").val(),
-
-
-
-                },
-                dataType: "json",
-                success: function (result) {
-                    if (result.data) {
-                        alert("保存成功！！！");
-                        parent.getNoticeTableData();
-                        TaskCancel();
-                    } else {
-                        alert("保存失败！！！")
-                    }
-                }
-            })
-        }
-        function TaskCancel() {
-            var index = parent.layer.getFrameIndex(window.name)
-            parent.layer.close(index);
-        }
-        //初始化部门下拉菜单
-//    function getPHASE() {
-//        $.ajax({
-//            url: '../Common/GetPhaseList',
-//            type: 'GET',
-//            dataType: 'json',
-//            success: function (data) {
-//                var PHASEValue = data.data;
-//                if (PHASEValue.length > 0) {
-//                    $("#part").html("");
-//                    for (var i = 0; i < PHASEValue.length; i++) {
-//                        if (TASKPHASE == PHASEValue[i].ID) {
-//                            var html = "<Option value = '" + PHASEValue[i].ID + "'  selected = 'true'>" + PHASEValue[i].NAME + "</Option>";
-//                        } else {
-//                            var html = "<Option value = '" + PHASEValue[i].ID + "'>" + PHASEValue[i].NAME + "</Option>";
-//                        };
-//                        $("#part").append(html);
-//                    }
-//                }
-//
-//
-//            },
-//            error: function (err) {
-//            }
-//
-//        })
-//    }
-
-
         //时间格式化函数
         function getFormatTime(time) {
             var time = new Date(parseInt(time));
