--- a/iters-web/src/main/resources/templates/page/home.html
+++ b/iters-web/src/main/resources/templates/page/home.html
@@ -73,29 +73,29 @@
             <h2>通知公告</h2>
             <a href="notice" class="more" target="right">更多</a>
         </div>
-        <div class="content">
-            <ul class="notice-list">
-                <li class="ue-clear">
-                    <a href="javascript:;" class="notice-title">中国移动关于设立作风建设监督举报电话的公告</a>
-                    <div class="notice-time">12-15</div>
-                </li>
-                <li class="ue-clear">
-                    <a href="javascript:;" class="notice-title">关于公示全市中国移动办公生产双主体责任名单的通知</a>
-                    <div class="notice-time">12-15</div>
-                </li>
-                <li class="ue-clear">
-                    <a href="javascript:;" class="notice-title">南京市中国移动支付系统安全管理责任人名单</a>
-                    <div class="notice-time">12-15</div>
-                </li>
-                <li class="ue-clear">
-                    <a href="javascript:;" class="notice-title">2014年全市通信行业安全生产工作要点</a>
-                    <div class="notice-time">12-15</div>
-                </li>
-                <li class="ue-clear">
-                    <a href="javascript:;" class="notice-title">中国移动南京公司关于表彰各位员工的规定</a>
-                    <div class="notice-time">12-15</div>
-                </li>
-            </ul>
+        <div class="content" id="htmlPublish">
+<!--            <ul class="notice-list">-->
+<!--                <li class="ue-clear">-->
+<!--                    <a href="javascript:;" class="notice-title">中国移动关于设立作风建设监督举报电话的公告</a>-->
+<!--                    <div class="notice-time">12-15</div>-->
+<!--                </li>-->
+<!--                <li class="ue-clear">-->
+<!--                    <a href="javascript:;" class="notice-title">关于公示全市中国移动办公生产双主体责任名单的通知</a>-->
+<!--                    <div class="notice-time">12-15</div>-->
+<!--                </li>-->
+<!--                <li class="ue-clear">-->
+<!--                    <a href="javascript:;" class="notice-title">南京市中国移动支付系统安全管理责任人名单</a>-->
+<!--                    <div class="notice-time">12-15</div>-->
+<!--                </li>-->
+<!--                <li class="ue-clear">-->
+<!--                    <a href="javascript:;" class="notice-title">2014年全市通信行业安全生产工作要点</a>-->
+<!--                    <div class="notice-time">12-15</div>-->
+<!--                </li>-->
+<!--                <li class="ue-clear">-->
+<!--                    <a href="javascript:;" class="notice-title">中国移动南京公司关于表彰各位员工的规定</a>-->
+<!--                    <div class="notice-time">12-15</div>-->
+<!--                </li>-->
+<!--            </ul>-->
         </div>
     </div>
 </div>
@@ -292,6 +292,7 @@
 <script src="statics/assets/js/bootstrap-table.js"></script>
 <script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
 <script src="statics/assets/js/email.js"></script>
+<script src="statics/assets/js/home.js"></script>
 <script>
     $(function () {
         $('#table').bootstrapTable({
