--- a/iters-web/src/main/resources/templates/page/mailList.html
+++ b/iters-web/src/main/resources/templates/page/mailList.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-table.css" rel="stylesheet" type="text/css">
-    <link href="css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/info-mgt.css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
+    <link rel="stylesheet" href="statics/assets/css/info-mgt.css" />
     <style>
         .tree_left{box-sizing:border-box;overflow-y: auto;width:19%;border: 1px #c1d3de solid;margin-right: 1%;border-top:none;}
         .tree_left h6,.tree_right h6{line-height: 30px;font-weight: bold;padding-left: 6px ;color: #000;font-size: 14px}
@@ -44,7 +44,7 @@
         .bot_btn{width: 100%;height: 30px;font-size:13px;text-align:center;}
     </style>
 
-    <script src="js/jquery.js"></script>
+    <script src="statics/assets/js/jquery.js"></script>
     <script>
         function change() {
             var height01 = $(window).height();
@@ -125,17 +125,17 @@
 <div class="pagination ue-clear"></div>
 </div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/demo/jquery.ztree.core-3.5.js"></script>
-<script type="text/javascript" src="js/jquery.ztree.excheck-3.5.js"></script>
-<script type="text/javascript" src="js/jquery.ztree.exedit-3.5.js"></script>
-<script src="js/mailList.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-table.js"></script>
-<script src="js/bootstrap-table-zh-CN.min.js"></script>
-<script src="js/date/js/laydate.js"></script>
-<script src="js/artDialog/jquery.artDialog.source.js?skin=default"></script>
-<script src="js/artDialog/plugins/iframeTools.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+<script type="text/javascript" src="statics/assets/js/demo/jquery.ztree.core-3.5.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.ztree.excheck-3.5.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.ztree.exedit-3.5.js"></script>
+<script src="statics/assets/js/mailList.js"></script>
+<script src="statics/assets/js/bootstrap.min.js"></script>
+<script src="statics/assets/js/bootstrap-table.js"></script>
+<script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
+<script src="statics/assets/js/artDialog/jquery.artDialog.source.js?skin=default"></script>
+<script src="statics/assets/js/artDialog/plugins/iframeTools.js"></script>
 
 <script>
     !function(){
@@ -144,6 +144,6 @@
         laydate({elem: '#demo1'});//绑定元素
     }();
 </script>
-<script src="js/layer_v2.1/layer/layer.js"></script>
+<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
 
 </html>
